# fastapi-mongo

./: .env.local  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-uvicorn.sh  run.sh
src/: main.py
