[tool.poetry]
name = "fastapi-mongo"
version = "0.1.0"
description = ""
authors = ["JinHyuck Cha <jhcha@superb-ai.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
pytest = "^7.1.1"
gunicorn = "^20.1.0"
beanie = "^1.10.1"
mypy = "^0.942"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
